--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
+    "@googlemaps/react-wrapper": "^1.2.0",
+    "formik": "^2.4.9",
     "framer-motion": "^12.29.2",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.8.0",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "16.1.5",
